Update styles to give a 'Liquid Glass' type appearance

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,9 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet", href="./styles.css")
   body
+    div.wave
+    div.wave
+    div.wave
     h1 Weighted Grade Calculator
     p Calculate your weighted grade from percentages of each assessment.
     form#CalculatorForm
