--- a/src/CalculatorItem/CalculatorItem.pug
+++ b/src/CalculatorItem/CalculatorItem.pug
@@ -5,7 +5,7 @@ template#CalculatorItemTemplate
       span Assessment/Exam name
       input(type="text" placeholder="e.g. Midterm Exam")
     label
-      span % final mark
+      span Weight (%)
       input(type="number", min="1", max="100" placeholder="e.g. 20" required)
     label
       span Mark (%)
