--- a/src/styles.css
+++ b/src/styles.css
@@ -26,10 +26,14 @@
   --color-shadow-hover: rgba(var(--color-primary-values), 0.18);
   --color-shadow-active: rgba(var(--color-primary-values), 0.22);
 
+  --box-shadow: 0 2px 8px 0 var(--color-shadow);
+
   --glass-color-bg: rgba(var(--color-white-values), 0.2);
-  --glass-color-bg-alt: rgba(var(--color-white-values), 0.7);
-  --glass-shadow: 0 2px 8px 0 var(--color-shadow,#3a0ca30a), inset 1px 1px 0 var(--color-white, #f1f3f8), inset 0 0 5px var(--color-white, #f1f3f8);
+  --glass-color-bg-alt: rgba(var(--color-white-values), 0.5);
+  --glass-shadow: var(--box-shadow), inset 1px 1px 0 var(--color-white, #f1f3f8),
+    inset 0 0 5px var(--color-white, #f1f3f8);
   --glass-blur: blur(2rem) saturate(0.7) opacity(0.5) brightness(0.98);
+  --glass-blur-alt: blur(3rem) saturate(0.7) opacity(0.7) brightness(0.98);
 }
 
 :root {
@@ -147,10 +151,7 @@ body {
   cursor: pointer;
   padding: var(--padding-small);
   border-radius: 50%;
-  transition: 
-    color 0.2s,
-    background 0.2s,
-    box-shadow 0.2s;
+  transition: color 0.2s, background 0.2s, box-shadow 0.2s;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -162,11 +163,7 @@ body {
 
   .material-symbols-outlined {
     font-size: var(--size-font-xxlarge);
-    font-variation-settings:
-      'FILL' 0,
-      'wght' 400,
-      'GRAD' 0,
-      'opsz' 24;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
   }
 }
 
@@ -218,7 +215,7 @@ form {
   font-size: var(--font-size-large);
   font-weight: var(--font-weight-heavy);
   cursor: pointer;
-  box-shadow: 0 2px 8px 0 var(--color-shadow);
+  box-shadow: var(--box-shadow);
   transition: --rotation 0.5s, transform 0.1s, box-shadow 0.15s;
 
   &:disabled {
@@ -316,9 +313,12 @@ label {
   &.open {
     right: 0;
 
-    .button-wrapper,
-    .contents {
-      background-color: var(--glass-color-bg-alt);
+    .close {
+      display: block;
+    }
+
+    .help {
+      display: none;
     }
   }
 
@@ -330,16 +330,23 @@ label {
     padding: var(--padding-small);
   }
 
+  .close {
+    display: none;
+  }
+
+  .help {
+    display: block;
+  }
+
   .contents {
     display: flex;
     flex-direction: column;
     gap: var(--gap-small);
     width: 25rem;
     padding: 0 var(--padding-large) var(--padding-large);
-    box-shadow: var(--glass-shadow);
-    background-color: var(--glass-color-bg);
-    backdrop-filter: var(--glass-blur);
     border-bottom-left-radius: var(--border-radius-large);
+    background-color: var(--color-white);
+    box-shadow: var(--box-shadow);
 
     p {
       margin: 0;
